# databricks-vision

./: .env.example  .gitignore  .gitleaksignore  CODEOWNERS.txt  CONTRIBUTING.md  DEPLOY.md  README.md  databricks.yml  image_gen.py  pyproject.toml
.github/workflows/: codeql.yml  dependency-review.yml
app/: README.md  app.yml.template  package.json  pyproject.toml  tsconfig.json
app/src/databricks_vision/backend/: models.py  router.py
app/src/databricks_vision/backend/core/: _background.py  _base.py  _config.py  _database.py  _defaults.py  _headers.py  _image_gen_dep.py  _image_validation.py  _static.py  dependencies.py
app/src/databricks_vision/backend/routers/: __init__.py  batch_images.py  batches.py  gallery.py  generate.py  search.py  settings.py  style_guidelines.py  volumes.py
app/src/databricks_vision/ui/: index.html
app/src/databricks_vision/ui/components/: batch-detail.tsx  image-dialog.tsx
app/src/databricks_vision/ui/components/apx/: navbar.tsx  volume-browser-dialog.tsx
app/src/databricks_vision/ui/components/ui/: dialog.tsx
app/src/databricks_vision/ui/lib/: api.ts  sse.ts  volumes-api.ts
app/src/databricks_vision/ui/routes/: batch.$batchId.tsx  generate.tsx  index.tsx  settings.tsx
app/src/databricks_vision/ui/styles/: globals.css
app/src/databricks_vision/ui/types/: routeTree.gen.ts
notebooks/: 00_SIGLIP_DEPLOY.py  01_MODEL_DEPLOY.py  02_BATCH_GENERATE.py  config.py  image_gen_model.py
scripts/: deploy.sh  post-deploy.sh  render-app-yml.sh
